--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>badgers den</title>
     </head>
     <body>
         <h1>test</h1>
+        <p>Im hosted with github pages</p>
     </body>
 </html>
