--- a/page2.html
+++ b/page2.html
@@ -1,8 +1,8 @@
 <hmtl>
     <head>
-        <title>Website</title>
+        <title>The Badgers Den</title>
     </head>
     <body>
-        <h1>test</h1>
+        <h1>Under Construction</h1>
     </body>
 </hmtl>
