--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<h3>DC Punk Archive Zine Library</h3>
+											<a href="dc punk archive.html" class="image"><img src="images/dc punk archive.PNG" alt="" /></a>
+											<h3>DC Punk Zine Archive</h3>
 											<p>A collection of Zines dating mostly from the 1970s-90s, with some from the early to mid 2000s  .</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="dc punk archive.html" class="button">Explore</a></li>
 											</ul>
 										</article>
 										<article>
@@ -166,16 +166,14 @@
 										<li><a href="generic.html">Generic</a></li>
 										<li><a href="elements.html">Elements</a></li>
 										<li>
-											<span class="opener">Submenu</span>
+											<span class="opener">Collections</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
+												<li><a href="dc punk archive.html">DC Punk Archive</a></li>
 												<li><a href="#">Ipsum Adipiscing</a></li>
 												<li><a href="#">Tempus Magna</a></li>
 												<li><a href="#">Feugiat Veroeros</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
 										<li>
 											<span class="opener">Another Submenu</span>
 											<ul>
@@ -185,9 +183,6 @@
 												<li><a href="#">Feugiat Veroeros</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
 									</ul>
 								</nav>
 
