--- a/elements.html
+++ b/elements.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Elements - Editorial by HTML5 UP</title>
+		<title>The Badgers Den</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -26,7 +26,7 @@
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
+										<li><a href="" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
 									</ul>
 								</header>
 
