--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
+										<li><a href="collection template.html">Generic</a></li>
+										<li><a href="">Elements</a></li>
 										<li>
 											<span class="opener">Collections</span>
 											<ul>
