--- a/dc punk archive.html
+++ b/dc punk archive.html
@@ -26,7 +26,7 @@
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#https://discord.gg/zFqQd4VuJh" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
+										<li><a href="https://discord.gg/zFqQd4VuJh" target="_blank" rel="noopener noreferrer" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
 									</ul>
 								</header>
 
