--- a/collection template.html
+++ b/collection template.html
@@ -47,6 +47,38 @@
 							<section>
 								<header class="major">
 									<h2>Zines</h2>
+									<ul class="icons">
+										<!-- "Nav" buttons, theres gotta be a better way lol -->
+										
+										<li><a href="#" class="fa-solid fa-a"><span class="label">A</span></a></li>
+										<li><a href="#" class="fa-solid fa-b"><span class="label">B</span></a></li>
+										<li><a href="#" class="fa-solid fa-c"><span class="label">C</span></a></li>
+										<li><a href="#" class="fa-solid fa-d"><span class="label">D</span></a></li>
+										<li><a href="#" class="fa-solid fa-e"><span class="label">E</span></a></li>
+										<li><a href="#" class="fa-solid fa-f"><span class="label">F</span></a></li>
+										<li><a href="#" class="fa-solid fa-g"><span class="label">G</span></a></li>
+										<li><a href="#" class="fa-solid fa-h"><span class="label">H</span></a></li>
+										<li><a href="#" class="fa-solid fa-i"><span class="label">I</span></a></li>
+										<li><a href="#" class="fa-solid fa-j"><span class="label">J</span></a></li>
+										<li><a href="#" class="fa-solid fa-k"><span class="label">K</span></a></li>
+										<li><a href="#" class="fa-solid fa-l"><span class="label">L</span></a></li>
+										<li><a href="#" class="fa-solid fa-m"><span class="label">M</span></a></li>
+										<li><a href="#" class="fa-solid fa-n"><span class="label">N</span></a></li>
+										<li><a href="#" class="fa-solid fa-o"><span class="label">O</span></a></li>
+										<li><a href="#" class="fa-solid fa-p"><span class="label">P</span></a></li>
+										<li><a href="#" class="fa-solid fa-q"><span class="label">Q</span></a></li>
+										<li><a href="#" class="fa-solid fa-r"><span class="label">R</span></a></li>
+										<li><a href="#" class="fa-solid fa-S"><span class="label">S</span></a></li>
+										<li><a href="#" class="fa-solid fa-T"><span class="label">T</span></a></li>
+										<li><a href="#" class="fa-solid fa-U"><span class="label">U</span></a></li>
+										<li><a href="#" class="fa-solid fa-V"><span class="label">V</span></a></li>
+										<li><a href="#" class="fa-solid fa-W"><span class="label">W</span></a></li>
+										<li><a href="#" class="fa-solid fa-X"><span class="label">X</span></a></li>
+										<li><a href="#" class="fa-solid fa-Y"><span class="label">Y</span></a></li>
+										<li><a href="#" class="fa-solid fa-Z"><span class="label">Z</span></a></li>
+
+
+									</ul>
 								</header>
 								<div class="posts">
 									<article>
