--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Ante interdum</h2>
+										<h2>Weekly Picks</h2>
 									</header>
 									<div class="mini-posts">
 										<article>
